--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/Anular.cshtml
@@ -93,7 +93,7 @@
     </div>
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "Grupo", new { IdCategoria = Model.IdCategoria, IdLinea = Model.IdLinea , Area = "Inventario" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "Grupo", new {IdEmpresa = Model.IdEmpresa, IdCategoria = Model.IdCategoria, IdLinea = Model.IdLinea , Area = "Inventario" }, null)">Cancelar</a>
     </div>
 
     @section Scripts {
