--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Subgrupo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Subgrupo/Anular.cshtml
@@ -121,7 +121,7 @@
     </div>
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "Subgrupo", new {IdCategoria = Model.IdCategoria, IdLinea = Model.IdLinea, IdGrupo = Model.IdGrupo , Area = "Inventario" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "Subgrupo", new {IdEmpresa = Model.IdEmpresa, IdCategoria = Model.IdCategoria, IdLinea = Model.IdLinea, IdGrupo = Model.IdGrupo , Area = "Inventario" }, null)">Cancelar</a>
     </div>
 
     @section Scripts {
