--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Linea/Nuevo.cshtml
@@ -66,7 +66,7 @@
     </div>
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "Linea", new {IdCategoria = Model.IdCategoria, Area ="Inventario" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "Linea", new {IdEmpresa = Model.IdEmpresa, IdCategoria = Model.IdCategoria, Area ="Inventario" }, null)">Cancelar</a>
     </div>
 
     @section Scripts {
