--- a/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/Modificar.cshtml
@@ -53,7 +53,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Parroquia",new {IdCiudad = Model.IdCiudad_Canton, IdPais = ViewBag.IdPais, Area = "General" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Parroquia",new { IdPais = Model.IdPais, IdProvincia = Model.IdProvincia, IdCiudad = Model.IdCiudad_Canton, Area = "General" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
