--- a/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Nuevo.cshtml
@@ -71,7 +71,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Provincia", new {IdPais = ViewBag.IdPais, Area = "General" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Provincia", new {IdPais = Model.IdPais, Area = "General" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
