--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/Gasto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/Gasto/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Tarjetas de crédito";
+    ViewBag.Title = "Rubro de gastos";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
