--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/Gasto/_GridViewPartial_Gasto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/Gasto/_GridViewPartial_Gasto.cshtml
@@ -4,7 +4,7 @@
     {
         settings.Name = "GridViewPartial_Gasto";
         settings.CallbackRouteValues = new { Controller = "Gasto", Action = "GridViewPartial_Gasto" };
-        settings.KeyFieldName = "IdTarjeta";
+        settings.KeyFieldName = "IdOrden";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
 
         //Configuración para que la grilla no muestre texto completo
