--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Nuevo.cshtml
@@ -139,14 +139,17 @@
         var mes_format = pad.substring(0, pad.length-mes.length) + mes;
         
         var periodo = anio + "-" + mes_format;
-        var fecha_texto_inicio = anio + "-" + mes_format + "-" + dia_inicio;
+        var fecha_texto_inicio = anio + "/" + mes_format + "/" + dia_inicio;
 
-        var dia_inicio = Date.parse(fecha_texto_inicio);
+        //var dia_inicio = Date.parse(fecha_texto_inicio);
+        var fecha_format = new Date(fecha_texto_inicio);
+        var num = fecha_format.getUTCDate();
+        var dia_inicio = anio + "/" + mes_format + "/" + num;
         var dia_fin = new Date(Date.UTC(anio, mes));
 
         pe_FechaIni.SetValue(new Date(dia_inicio));
         pe_FechaFin.SetValue(dia_fin);
-
-        $("#IdPeriodo").val(periodo);
+        
+        $("#IdPeriodo").val(periodo);        
     }
 </script>
