--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoOrdenPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoOrdenPago/Nuevo.cshtml
@@ -116,7 +116,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble">Cuenta contable débito*</label>
+                    <label for="IdCtaCble">Cuenta contable débito</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble, settings =>
                {
                    settings.Name = "IdCtaCble";
@@ -142,7 +142,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Credito">Cuenta contable crédito*</label>
+                    <label for="IdCtaCble_Credito">Cuenta contable crédito</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Credito, settings =>
                {
                    settings.Name = "IdCtaCble_Credito";
