--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Facturacion.fa_TerminoPago_Info
 @{
-    ViewBag.Title = "Nuevo termino";
+    ViewBag.Title = "Nuevo término de pago";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
