--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoOrdenPago/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoOrdenPago/Anular.cshtml
@@ -108,7 +108,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble">Cuenta contable debito</label>
+                    <label for="IdCtaCble">Cuenta contable débito</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble, settings =>
                {
                    settings.Name = "IdCtaCble";
@@ -134,7 +134,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Credito">Cuenta contable credito</label>
+                    <label for="IdCtaCble_Credito">Cuenta contable crédito</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Credito, settings =>
                {
                    settings.Name = "IdCtaCble_Credito";
