--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Nuevo.cshtml
@@ -150,6 +150,6 @@
         pe_FechaIni.SetValue(new Date(dia_inicio));
         pe_FechaFin.SetValue(dia_fin);
         
-        $("#IdPeriodo").val(periodo);        
+        $("#IdPeriodo").val(anio + mes_format);
     }
 </script>
