--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Anular.cshtml
@@ -212,3 +212,42 @@
     }
 }
 
+<script>
+    $(function () {
+        actualizar_periodo();
+
+        $("#pe_mes").change(function () {
+            actualizar_periodo();
+        });
+
+        $("#IdanioFiscal").change(function () {
+            actualizar_periodo();
+        });
+        $("#IdPeriodo").change(function () {
+            actualizar_periodo();
+        });
+    });
+
+    function actualizar_periodo() {
+        var mes = $("#pe_mes").val();
+        var anio = $("#IdanioFiscal").val();
+        var dia_inicio = 1;
+        var pad = "00"
+        var mes_format = pad.substring(0, pad.length-mes.length) + mes;
+
+        var periodo = anio + "-" + mes_format;
+        var fecha_texto_inicio = anio + "/" + mes_format + "/" + dia_inicio;
+
+        //var dia_inicio = Date.parse(fecha_texto_inicio);
+        var fecha_format = new Date(fecha_texto_inicio);
+        var num = fecha_format.getUTCDate();
+        var dia_inicio = anio + "/" + mes_format + "/" + num;
+        var dia_fin = new Date(Date.UTC(anio, mes));
+
+        pe_FechaIni.SetValue(new Date(dia_inicio));
+        pe_FechaFin.SetValue(dia_fin);
+
+        $("#IdPeriodo").val(anio + mes_format);
+    }
+</script>
+
