--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_ro_rol.cshtml
@@ -103,37 +103,14 @@
                 }
             });
         });
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "#";
-            column.Width = Unit.Pixel(85);
-            column.SetDataItemTemplateContent(container =>
-            {
-                if (Convert.ToString(DataBinder.Eval(container.DataItem, "Contabilizado")) == "N")
-                {
-
-                    Html.DevExpress().HyperLink(hyperlink =>
-                    {
-                        var IdNomina_Tipo = DataBinder.Eval(container.DataItem, "IdNomina_Tipo");
-                        var IdNomina_TipoLiqui = DataBinder.Eval(container.DataItem, "IdNomina_TipoLiqui");
-                        var IdPeriodo = DataBinder.Eval(container.DataItem, "IdPeriodo");
-                        hyperlink.Properties.Text = "contabilizar";
-                        hyperlink.NavigateUrl = Url.Action("ContabilizarPeriodo", "ProcesarRol", new { IdNomina_Tipo = IdNomina_Tipo, IdNomina_TipoLiqui = IdNomina_TipoLiqui, IdPeriodo = IdPeriodo });
-                    }).Render();
-
-                }
-
-            });
-        });
-
+       
         settings.Columns.Add("Descripcion","Nómina").Width=Unit.Percentage(9);
         settings.Columns.Add("DescripcionProcesoNomina","Proceso").Width = Unit.Percentage(15);
-        settings.Columns.Add("IdPeriodo", "Periodo").Width = Unit.Percentage(9);
         settings.Columns.Add(column =>
         {
             column.FieldName = "pe_FechaIni";
             column.Caption = "Desde";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "d";
 
         });
@@ -141,31 +118,44 @@
         {
             column.FieldName = "pe_FechaFin";
             column.Caption = "Hasta";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "d";
 
         });
-        settings.Columns.Add("Procesado","Procesado").Width=Unit.Percentage(10);
-        settings.Columns.Add("Cerrado","Cerrado").Width = Unit.Percentage(10);
-        settings.Columns.Add("Contabilizado","Contabilizado").Width = Unit.Percentage(12);
-
-
+        settings.Columns.Add("Procesado","Procesada").Width=Unit.Percentage(8);
+        settings.Columns.Add("Cerrado","Cerrada").Width = Unit.Percentage(8);
+        settings.Columns.Add("Contabilizado", "Contabilizada").Width = Unit.Percentage(10);
 
         settings.Columns.Add(column =>
         {
+            column.Caption = "Archivo";
+
+            column.SetDataItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<span class=\"glyphicon fa-file-archive-o\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("Nuevo", "ArchivosTransferencias", new { Area = "RRHH", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa"), IdNomina_Tipo = DataBinder.Eval(c.DataItem, "IdNomina_Tipo"), IdNomina_TipoLiqui = DataBinder.Eval(c.DataItem, "IdNomina_TipoLiqui"), IdPeriodo = DataBinder.Eval(c.DataItem, "IdPeriodo") }, Request.Url.Scheme) + "');\"></span>");
+            });
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(6);
+        });
+
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "General";
+
             column.SetDataItemTemplateContent(c =>
             {
                 ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_001", "RRHHReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa"), IdNomina_Tipo = DataBinder.Eval(c.DataItem, "IdNomina_Tipo"), IdNomina_TipoLiqui = DataBinder.Eval(c.DataItem, "IdNomina_TipoLiqui"), IdPeriodo = DataBinder.Eval(c.DataItem, "IdPeriodo") }, Request.Url.Scheme) + "');\"></span>");
             });
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(4);
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(6);
         });
         settings.Columns.Add(column =>
         {
+            column.Caption = "Individual";
             column.SetDataItemTemplateContent(c =>
             {
+
                 ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_002", "RRHHReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa"), IdNomina_Tipo = DataBinder.Eval(c.DataItem, "IdNomina_Tipo"), IdNomina_TipoLiqui = DataBinder.Eval(c.DataItem, "IdNomina_TipoLiqui"), IdPeriodo = DataBinder.Eval(c.DataItem, "IdPeriodo") }, Request.Url.Scheme) + "');\"></span>");
             });
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(4);
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(6);
         });
     });
 }
