--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Nuevo.cshtml
@@ -17,7 +17,7 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Nuevo", "ArvhivosTransfeencias", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Nuevo", "ArvhivosTransfencias", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdArchivo)
@@ -52,7 +52,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdBanco">Tipo de archivo*</label>
-                    @Html.DropDownListFor(q => q.IdProceso_Bancario, new SelectList(ViewBag.lst_proceso, "IdProceso", "NombreProceso"), new { @class = "form-control", @id = "IdProceso" })
+                    @Html.DropDownListFor(q => q.IdProceso_Bancario, new SelectList(ViewBag.lst_proceso, "IdProceso", "NombreProceso"), new { @class = "form-control", @id = "IdProceso_Bancario" })
                     @Html.ValidationMessageFor(q => q.IdProceso_Bancario, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -82,14 +82,14 @@
 
 
 <script>
+    $("#IdBanco").change(function () {
+        $("#IdProceso_Bancario").empty();
+        cargar_procesos();
 
-
-
-
-
+    });
             function cargar_procesos() {
                 var datos = {
-                    IdNomina: $("#IdNomina_Tipo").val()
+                    IdBanco: $("#IdBanco").val()
                 }
 
                 $.ajax({
@@ -103,11 +103,45 @@
                     contentType: 'application/json; charset=utf-8',
                     success: function (data) {
 
-                       
+                        $.each(data, function (i, row) {
+                            $("#IdProceso_Bancario").append("<option value=" + row.IdProceso_bancario_tipo + ">" + row.NombreProceso + "</option>");
+
+                        });
+                    },
+                    error: function (error) {
+                    }
+                });
+    };
+
+
+    
+        
+    cargar_tipo_liquidacion_nomina();
+            function cargar_tipo_liquidacion_nomina() {
+                var datos = {
+                    IdNomina: $("#IdNomina_Tipo").val()
+                }
+
+                $.ajax({
+                    type: 'POST',
+                    data: JSON.stringify(datos),
+                    url: '@Url.Action("get_lst_nomina_tipo_liq", "NominaTipoLiquidacion", new { Area = "RRHH" })',
+                    async: false,
+                    bDeferRender: true,
+                    bProcessing: true,
+                    dataType: 'json',
+                    contentType: 'application/json; charset=utf-8',
+                    success: function (data) {
+
+                        $.each(data, function (i, row) {
+                            $("#IdNomina_TipoLiqui").append("<option value=" + row.IdNomina_TipoLiqui + ">" + row.DescripcionProcesoNomina + "</option>");
+                        });
+                        $("#IdNomina_TipoLiqui").val(2);
                     },
                     error: function (error) {
                     }
                 });
             };
+
 
 </script>
