--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia.cshtml
@@ -51,7 +51,7 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
-            if (Convert.ToString(e.GetValue("Estado")) == "I")
+            if (Convert.ToString(e.GetValue("estado")) == "I")
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
@@ -61,11 +61,11 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(tc.DataItem, "IdNovedad") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(tc.DataItem, "IdNovedad") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdEmpresa = DataBinder.Eval(tc.DataItem, "IdArchivo") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdEmpresa = DataBinder.Eval(tc.DataItem, "IdArchivo") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -81,21 +81,30 @@
             c.Width = Unit.Pixel(120);
         });
 
-        settings.Columns.Add("IdNovedad","ID").Width=Unit.Percentage(5);
+
+
+        settings.Columns.Add("IdArchivo","ID").Width = Unit.Percentage(8);
+        settings.Columns.Add("Descripcion", "Nómina").Width = Unit.Percentage(22);
+        settings.Columns.Add("DescripcionProcesoNomina", "Nómina tipo").Width = Unit.Percentage(8);
+        settings.Columns.Add("NombreProceso", "Archivo").Width = Unit.Percentage(8);
+
+        
         settings.Columns.Add(column =>
         {
-            column.FieldName = "Fecha";
-            column.Caption = "Fecha";
+            column.FieldName = "pe_FechaIni";
+            column.Caption = "Fecha inicio";
             column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "d";
 
         });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pe_FechaFin";
+            column.Caption = "Fecha fin";
+            column.Width = Unit.Percentage(8);
+            column.PropertiesEdit.DisplayFormatString = "d";
 
-        settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(8);
-        settings.Columns.Add("pe_nombreCompleto","Nombres").Width = Unit.Percentage(22);
-        settings.Columns.Add("Descripcion","Nómina").Width = Unit.Percentage(8);
-        settings.Columns.Add("DescripcionProcesoNomina","Proceso").Width = Unit.Percentage(15);
-        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(10);
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
@@ -110,7 +119,7 @@
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_003", "RRHHReportes", new { Area = "Reportes", IdEmpleado = DataBinder.Eval(c.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(c.DataItem, "IdNovedad") }, Request.Url.Scheme) + "');\"></span>");
+                //ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_003", "RRHHReportes", new { Area = "Reportes", IdEmpleado = DataBinder.Eval(c.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(c.DataItem, "IdNovedad") }, Request.Url.Scheme) + "');\"></span>");
             });
             column.Width = Unit.Percentage(5);
         });
